--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Trivia Game</title>
+  <title>Giphy</title>
 
   <link rel="stylesheet" href="Assets/CSS/reset.css">
   <!-- Bootstrap File -->
@@ -18,7 +18,7 @@
   <div class="container jumbotron">
     <div class="row justify-content-center">
       <div>
-        <h1>Triva Game</h1><br><br>
+        <h1>Giphy</h1><br><br>
       </div>
     </div>
     <div class="row justify-content-center" id="topics">
